
##############################################
# pyproject.toml file
# configuration of tool here if possible
##############################################
[build-system]
requires = [ "setuptools >= 35.0.2", "wheel >= 0.29.0"]
build-backend = "setuptools.build_meta"

##############################################
# pyright
# type-cheker
##############################################
[tool.pyright]
pythonPlatform= "Linux"
pythonVersion="3.8"
ignore= [".tox/*","tests/"]


##############################################
# ISORT
# sort imports
##############################################
[tool.isort]
multi_line_output=3
include_trailing_comma = true
force_grid_wrap=0
use_parentheses = true
line_length=120
skip_gitignore= true
src_paths = "pyhparams/"
profile = "black"


##############################################
# coverage.py
# test coverage
##############################################
[tool.coverage.run]
relative_files = true
branch = true
#parallel = true
# TODO change cytena_pre_commit to your package name
source = ["pyhparams", "*/site-packages"]
omit = ['.tox/*']

#[tool.coverage.paths]

[tool.coverage.report]
show_missing = true
omit = ['.tox/*']
precision = 2

##############################################
# BLACK - Code Formatter
##############################################
[tool.black]
line-length = 120


##############################################
# pytests
# add coverage to pytest
##############################################
[tool.pytest.ini_options]
minversion = "6.0"
# addopts = "--cov --cov-report=term-missing"
