[metadata]
name = pyhparams
version = attr: pyhparams.__version__
long_description = file: README.md
long_description_content_type = text/markdown
author = "Markus Merklinger"
author_email = "merklingermarkus@gmail.com"
license = "TODO: "
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = pyhparams
install_requires =
    click
    click-option-group
    re-assert==1.1.0
    #omegaconf
    git-python
    colorlog
    rich

python_requires = >=3.8

[flake8]
max-line-length = 120
doctests = True
exclude = .git, .eggs, .egg-info, __pycache__, tests/, docs/, build/, dist/, .pytest_cache/, tags/, .tox/, .pyenv/, .cache
min-coverage-percents = 75
ignore =
    D100 D104 D2 D4 # Docstrings: only for public fn, clases
    WPS305 # WPS305: Found `f`
    WPS336 # WPS336 Found explicit string concat
    Q000 # Q000  Remove bad quotes -> ""
    WPS421 # WPS421 Found wrong function call
    F541 # f-string is missing placeholders
    E731 # allow lambda

